fix(html): allow long test paths to wrap

--- a/packages/html-reporter/src/testCaseView.css
+++ b/packages/html-reporter/src/testCaseView.css
@@ -34,6 +34,20 @@
   color: var(--color-fg-default);
 }
 
+.test-case-header div {
+  flex-shrink: 0;
+}
+
+.test-case-header div.test-case-path {
+  flex-shrink: 1;
+}
+
+.test-case-path {
+  flex: none;
+  align-items: center;
+  padding: 0 8px;
+}
+
 .test-case-title {
   flex: none;
   padding: 8px;
@@ -53,12 +67,6 @@
 .test-case-run-duration {
   color: var(--color-fg-subtle);
   padding-left: 8px;
-}
-
-.test-case-path {
-  flex: none;
-  align-items: center;
-  padding: 0 8px;
 }
 
 .test-case-annotation {
